[package]
name = "gitearecent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking","json"] }
serde_json="1.0.96"
chrono="0.4.24"
rayon="1.7.0"
dotenv = "0.15.0"
prefstore= {git="https://github.com/visnkmr/prefstore.git"}
serde = {version = "1.0.157", features = ["derive"]}